Update gallery with UI mockups: Mobile app screens, dashboards, app interfaces

--- a/index.html
+++ b/index.html
@@ -379,63 +379,63 @@
             </div>
 
             <div class="gallery-grid">
-                <!-- Educational App -->
+                <!-- Mobile App UI - Educational -->
                 <div class="gallery-item" onclick="openLightbox(this)">
-                    <img src="https://images.unsplash.com/photo-1501504905252-473c47e087f8?w=600&h=400&fit=crop"
-                        alt="Educational App">
+                    <img src="https://images.unsplash.com/photo-1512941937669-90a1b58e7e9c?w=600&h=400&fit=crop"
+                        alt="Educational App UI">
                     <div class="gallery-overlay">
-                        <span class="gallery-title">Educational Learning App</span>
-                        <span class="gallery-category">EdTech</span>
+                        <span class="gallery-title">Educational App UI</span>
+                        <span class="gallery-category">Mobile App</span>
                     </div>
                 </div>
 
-                <!-- E-Commerce App -->
+                <!-- E-Commerce App UI -->
                 <div class="gallery-item" onclick="openLightbox(this)">
-                    <img src="https://images.unsplash.com/photo-1556742049-0cfed4f6a45d?w=600&h=400&fit=crop"
-                        alt="E-Commerce App">
+                    <img src="https://images.unsplash.com/photo-1607082349566-187342175e2f?w=600&h=400&fit=crop"
+                        alt="E-Commerce App UI">
                     <div class="gallery-overlay">
-                        <span class="gallery-title">E-Commerce Mobile App</span>
-                        <span class="gallery-category">Shopping</span>
+                        <span class="gallery-title">E-Commerce App UI</span>
+                        <span class="gallery-category">Shopping App</span>
                     </div>
                 </div>
 
-                <!-- Restaurant / Food Delivery App -->
+                <!-- Food Delivery App UI -->
                 <div class="gallery-item" onclick="openLightbox(this)">
-                    <img src="https://images.unsplash.com/photo-1565299624946-b28f40a0ae38?w=600&h=400&fit=crop"
-                        alt="Food Delivery App">
+                    <img src="https://images.unsplash.com/photo-1526367790999-0150786686a2?w=600&h=400&fit=crop"
+                        alt="Food Delivery App UI">
                     <div class="gallery-overlay">
-                        <span class="gallery-title">Restaurant & Food App</span>
+                        <span class="gallery-title">Restaurant App UI</span>
                         <span class="gallery-category">Food Delivery</span>
                     </div>
                 </div>
 
-                <!-- Institute Dashboard -->
+                <!-- Admin Dashboard UI -->
                 <div class="gallery-item" onclick="openLightbox(this)">
                     <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=600&h=400&fit=crop"
-                        alt="Institute Dashboard">
+                        alt="Admin Dashboard">
                     <div class="gallery-overlay">
-                        <span class="gallery-title">Institute Admin Dashboard</span>
+                        <span class="gallery-title">Institute Dashboard</span>
                         <span class="gallery-category">Web Dashboard</span>
                     </div>
                 </div>
 
-                <!-- Learning Management System -->
+                <!-- Analytics Dashboard -->
                 <div class="gallery-item" onclick="openLightbox(this)">
-                    <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?w=600&h=400&fit=crop"
-                        alt="Learning Management">
+                    <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?w=600&h=400&fit=crop"
+                        alt="Analytics Dashboard">
                     <div class="gallery-overlay">
-                        <span class="gallery-title">Learning Management System</span>
-                        <span class="gallery-category">Education Portal</span>
+                        <span class="gallery-title">Analytics Dashboard</span>
+                        <span class="gallery-category">Data Visualization</span>
                     </div>
                 </div>
 
-                <!-- Mobile Shopping Experience -->
+                <!-- Mobile App Screens -->
                 <div class="gallery-item" onclick="openLightbox(this)">
-                    <img src="https://images.unsplash.com/photo-1563013544-824ae1b704d3?w=600&h=400&fit=crop"
-                        alt="Mobile Shopping">
+                    <img src="https://images.unsplash.com/photo-1611162617474-5b21e879e113?w=600&h=400&fit=crop"
+                        alt="Mobile App Screens">
                     <div class="gallery-overlay">
-                        <span class="gallery-title">Mobile Shopping Experience</span>
-                        <span class="gallery-category">E-Commerce</span>
+                        <span class="gallery-title">Mobile App Screens</span>
+                        <span class="gallery-category">UI/UX Design</span>
                     </div>
                 </div>
             </div>
