--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
             </div>
 
             <div class="socials">
-                <a href="https://wa.me/923007971374" class="social-icon" target="_blank" title="WhatsApp"><i
+                <a href="https://wa.link/q2fanj" class="social-icon" target="_blank" title="WhatsApp"><i
                         class="fa-brands fa-whatsapp"></i></a>
                 <a href="https://facebook.com/IftikharXahid" class="social-icon" target="_blank" title="Facebook"><i
                         class="fa-brands fa-facebook"></i></a>
